# watchdantic

./: .gitignore  README.md  USER_GUIDE.md  devenv.nix  devenv.yaml  pyproject.toml
examples/: watch.toml
src/: actions.py
src/examples/: basic_usage_script.py  config_hotreload_script.py  etl_pipeline_script.py  integrated_editing_workflow.py  markdown_example_script.py  story_editing_actions.py  story_editing_models.py  toml_example_script.py  txt_example_script.py
src/scripts/: cliplog.py  demo_debounce.py  editing_workflow.py  repo_dump.py
src/tests/: conftest.py  report.html  test_base_format.py  test_core_config.py  test_core_debouncing.py  test_core_handlers.py  test_core_triggers.py  test_debounce.py  test_decorator.py  test_event_processing.py  test_example_scripts.py  test_exceptions.py  test_handler_registry.py  test_handler_registry_pattern_matching.py  test_jsonlines.py  test_jsonsingle.py  test_logging.py  test_markdown_handler.py  test_models.py  test_recursive_protection.py  test_structure.py  test_toml_handler.py  test_txt_handler.py  test_type_safety.py  test_watchdantic.py  test_write.py
src/watchdantic/: __init__.py  cli.py  exceptions.py
src/watchdantic/_legacy/core/: __init__.py
src/watchdantic/_legacy/formats/: __init__.py  jsonlines.py
src/watchdantic/core/: config.py  debouncing.py  handlers.py  logging.py  models.py  pipeline.py  watcher.py
src/watchdantic/engine/: config_loader.py  config_models.py  dispatcher.py  engine.py  events.py  matcher.py
src/watchdantic/engine/actions/: command.py  runner.py
src/watchdantic/formats/: __init__.py  base.py  detection.py  jsonlines.py  jsonsingle.py  markdown.py  toml.py  txt.py
tests/: conftest.py  test_action_runner.py  test_cli.py  test_command_runner.py  test_config_loader.py  test_config_models.py  test_dispatcher.py  test_events.py  test_exceptions.py  test_integration.py  test_matcher.py
