[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdantic"
version = "0.2.0"
description = "Config-driven file watcher with shell command actions, powered by watchfiles + Pydantic."
authors = [{ name = "Watchdantic Authors", email = "devnull@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "watchfiles>=0.21",
  "pydantic>=2.0.0",
]

[project.scripts]
watchdantic = "watchdantic.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-html",
  "ruff",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
target-version = "py311"
